[gd_scene load_steps=46 format=3 uid="uid://d1w51ia4nwluc"]

[ext_resource type="Script" path="res://player/player.gd" id="1_lx0as"]
[ext_resource type="Texture2D" uid="uid://2sm8pie633ge" path="res://objects/crate/crate.png" id="2_2k1pi"]
[ext_resource type="FontFile" uid="uid://clvfdpwuiqgui" path="res://fonts/RoSpritendoSemiboldBeta-vmVwZ.otf" id="2_cibyo"]
[ext_resource type="Shader" path="res://shaders/GodotRetro/Screen Shaders/Grain.gdshader" id="3_28j33"]
[ext_resource type="PackedScene" uid="uid://tj837phb2kfp" path="res://shield/shield.tscn" id="3_imjhw"]
[ext_resource type="Texture2D" uid="uid://bociqye04gv3g" path="res://shield/blurred-shield.png" id="4_8vdka"]
[ext_resource type="Texture2D" uid="uid://bpq5u3loojfgl" path="res://shield/anim-shield.png" id="5_dv8vu"]
[ext_resource type="PackedScene" uid="uid://dv26w14qirikq" path="res://player/player_spooky.tscn" id="5_j08mn"]
[ext_resource type="AudioStream" uid="uid://sanedl10k2lj" path="res://sounds/music/playing-theme-002.ogg" id="7_hjyu4"]
[ext_resource type="AudioStream" uid="uid://dn4c2solurshy" path="res://sounds/music/boss-theme-002.ogg" id="8_v6lxc"]
[ext_resource type="AudioStream" uid="uid://d2pq6jvu5db4g" path="res://sounds/fx/oof-002.ogg" id="9_0kch7"]
[ext_resource type="AudioStream" uid="uid://coup8w3myt0qn" path="res://sounds/fx/cast-002.ogg" id="10_sj83s"]
[ext_resource type="AudioStream" uid="uid://th2wtqg4hbq1" path="res://sounds/music/perished-002.ogg" id="11_5wmgc"]
[ext_resource type="AudioStream" uid="uid://beb5rdcxtboa0" path="res://sounds/music/win-002.ogg" id="12_478el"]
[ext_resource type="Texture2D" uid="uid://demma3483dfu" path="res://player/heart-burst.png" id="14_j28mf"]

[sub_resource type="Curve" id="Curve_e5722"]
_data = [Vector2(0, 0), 0.0, 1.4, 0, 0, Vector2(0.720779, 0.926316), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_mhn2v"]
curve = SubResource("Curve_e5722")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_mhmlw"]
direction = Vector3(1, 1, 1)
spread = 85.45
gravity = Vector3(0, 5, 0)
initial_velocity_min = 1.0
initial_velocity_max = 1.0
angle_max = 258.9
anim_speed_min = 0.3
anim_speed_max = 1.0
anim_speed_curve = SubResource("CurveTexture_mhn2v")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_qiadx"]
transparency = 1
vertex_color_use_as_albedo = true
albedo_texture = ExtResource("14_j28mf")
billboard_mode = 3
particles_anim_h_frames = 10
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="QuadMesh" id="QuadMesh_75olq"]
material = SubResource("StandardMaterial3D_qiadx")
size = Vector2(0.6, 0.6)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_r7yo4"]
transparency = 1
albedo_texture = ExtResource("14_j28mf")
billboard_mode = 3
particles_anim_h_frames = 10
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="QuadMesh" id="QuadMesh_sheum"]
material = SubResource("StandardMaterial3D_r7yo4")
size = Vector2(0.6, 0.6)

[sub_resource type="Curve" id="Curve_yxbp1"]
max_value = 2.0
_data = [Vector2(0, 0), 0.0, 1.4, 0, 0, Vector2(0.478022, 0.336842), 0.0, 0.0, 0, 0, Vector2(0.697802, 0.357895), 0.0, 0.0, 0, 0, Vector2(0.725275, 1.15789), 0.0, 0.0, 0, 0, Vector2(0.983517, 1.49474), 0.0, 0.0, 0, 0]
point_count = 5

[sub_resource type="Animation" id="Animation_sq4sq"]
resource_name = "hit_flicker"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("player_spooky:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 0.9, 1, 1.1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false, true, false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3j7av"]
_data = {
"hit_flicker": SubResource("Animation_sq4sq")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3yy6v"]
bg_color = Color(0, 0.658824, 0.243137, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q0gqm"]
bg_color = Color(0, 0.431373, 0.160784, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_s3l46"]
radius = 0.4

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mry7x"]
shader = ExtResource("3_28j33")
shader_parameter/colored = true
shader_parameter/color_amount = 0.95
shader_parameter/grain_amount = 0.026
shader_parameter/grain_size = 2.685
shader_parameter/lum_amount = 1.324

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_mxffn"]
transparency = 1
albedo_texture = ExtResource("4_8vdka")
uv1_scale = Vector3(1.227, 1.227, 1.227)

[sub_resource type="CylinderMesh" id="CylinderMesh_ocjjy"]
material = SubResource("StandardMaterial3D_mxffn")

[sub_resource type="AtlasTexture" id="AtlasTexture_2oweu"]
atlas = ExtResource("5_dv8vu")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oitrh"]
atlas = ExtResource("5_dv8vu")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ich0"]
atlas = ExtResource("5_dv8vu")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kewt8"]
atlas = ExtResource("5_dv8vu")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g2imi"]
atlas = ExtResource("5_dv8vu")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_w4gf3"]
atlas = ExtResource("5_dv8vu")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u8rlt"]
atlas = ExtResource("5_dv8vu")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bbb83"]
atlas = ExtResource("5_dv8vu")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5sd0r"]
atlas = ExtResource("5_dv8vu")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_k5ihm"]
atlas = ExtResource("5_dv8vu")
region = Rect2(576, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_hyahn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2oweu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oitrh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ich0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kewt8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2imi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w4gf3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u8rlt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bbb83")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5sd0r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k5ihm")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_kd2sf"]
albedo_color = Color(0.74902, 0.713726, 0.694118, 1)
albedo_texture = ExtResource("2_2k1pi")
uv1_triplanar = true

[sub_resource type="BoxMesh" id="BoxMesh_dv0o7"]
material = SubResource("StandardMaterial3D_kd2sf")
size = Vector3(2, 2, 2)

[sub_resource type="BoxShape3D" id="BoxShape3D_pdq4e"]
size = Vector3(2, 2, 2)

[node name="Player" type="CharacterBody3D" groups=["player"]]
collision_mask = 17
axis_lock_linear_y = true
script = ExtResource("1_lx0as")

[node name="HealingParticles" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.34283, 0)
visible = false
emitting = false
amount = 21
one_shot = true
explosiveness = 0.52
randomness = 0.61
process_material = SubResource("ParticleProcessMaterial_mhmlw")
draw_pass_1 = SubResource("QuadMesh_75olq")

[node name="HealingParticles2" type="CPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.34283, 0)
emitting = false
amount = 21
one_shot = true
explosiveness = 0.52
randomness = 0.61
mesh = SubResource("QuadMesh_sheum")
direction = Vector3(2, 2, 2)
spread = 148.63
flatness = 0.26
gravity = Vector3(0, 5, 0)
initial_velocity_min = 0.4
initial_velocity_max = 0.4
linear_accel_min = 2.0
linear_accel_max = 3.0
anim_speed_min = 0.3
anim_speed_max = 1.0
anim_speed_curve = SubResource("Curve_yxbp1")

[node name="HitAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3j7av")
}

[node name="Control" type="Control" parent="."]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="HealthBar" type="ProgressBar" parent="Control"]
z_index = 2
layout_mode = 1
anchors_preset = -1
anchor_left = 0.67
anchor_top = 0.032
anchor_right = 1.0
anchor_bottom = 0.1
offset_left = 0.399963
offset_top = -0.440001
offset_right = 228.0
scale = Vector2(0.588, 0.588)
theme_override_styles/fill = SubResource("StyleBoxFlat_3yy6v")
value = 100.0
show_percentage = false

[node name="InnerHealthBar" type="ProgressBar" parent="Control/HealthBar"]
z_index = 1
z_as_relative = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_q0gqm")
show_percentage = false

[node name="ExpLabel" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.397
anchor_top = 0.193
anchor_right = 0.97
anchor_bottom = 0.227
theme_override_fonts/font = ExtResource("2_cibyo")
theme_override_font_sizes/font_size = 32
text = "0 EXP"
horizontal_alignment = 2
vertical_alignment = 1

[node name="TimeLabel" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.269
anchor_top = 0.113
anchor_right = 0.967
anchor_bottom = 0.113
theme_override_fonts/font = ExtResource("2_cibyo")
theme_override_font_sizes/font_size = 32
text = "00:00"
horizontal_alignment = 2
vertical_alignment = 1

[node name="WinLabel" type="Label" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_top = 0.398
anchor_right = 1.0
anchor_bottom = 0.398
offset_top = -0.160004
offset_bottom = 248.84
theme_override_fonts/font = ExtResource("2_cibyo")
theme_override_font_sizes/font_size = 32
text = "YOU'VE SAVED THIS REALM OF EXISTENCE




PRESS A / [E] TO CONTINUE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SignText" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.398
anchor_right = 1.0
anchor_bottom = 0.398
offset_left = 32.0
offset_top = -131.16
offset_right = -30.0
offset_bottom = 405.84
theme_override_fonts/font = ExtResource("2_cibyo")
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="DoorLabel" type="Label" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.068
anchor_top = 0.016
anchor_right = 0.194
anchor_bottom = 0.08
offset_left = -0.0400085
offset_top = -0.0799999
offset_right = 506.6
offset_bottom = 4.4
theme_override_fonts/font = ExtResource("2_cibyo")
theme_override_font_sizes/font_size = 24
text = "YOU NEED TO FIND THE KEY CHEST"
vertical_alignment = 1

[node name="KeyAlertLabel" type="Label" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.068
anchor_top = 0.015
anchor_right = 0.614
anchor_bottom = 0.08
offset_left = -0.0400085
offset_top = 0.200001
offset_right = 0.0799561
offset_bottom = 18.4
theme_override_fonts/font = ExtResource("2_cibyo")
theme_override_font_sizes/font_size = 28
text = "YOU FOUND THE KEY,
NOW FIND THE DOOR"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DeadLabel" type="Label" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_top = 0.3
anchor_right = 1.0
anchor_bottom = 0.7
theme_override_fonts/font = ExtResource("2_cibyo")
theme_override_font_sizes/font_size = 52
text = "YOU'VE PERISHED



PRESS START TO RETURN

TO THE MAIN MENU"
horizontal_alignment = 1
vertical_alignment = 1

[node name="KeyAlertTimer" type="Timer" parent="Control"]
wait_time = 4.364
one_shot = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.00518, 0)
shape = SubResource("CapsuleShape3D_s3l46")

[node name="CamRoot" type="Node3D" parent="."]

[node name="h" type="Node3D" parent="CamRoot"]

[node name="v" type="Node3D" parent="CamRoot/h"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.55411, 0)

[node name="SpringArm3D" type="SpringArm3D" parent="CamRoot/h/v"]
transform = Transform3D(-1, -1.33744e-08, 8.63937e-08, 0, 0.988228, 0.152986, -8.74228e-08, 0.152986, -0.988228, 0, 0, 0)
spring_length = 12.0

[node name="Camera" type="Camera3D" parent="CamRoot/h/v/SpringArm3D"]

[node name="ColorRect" type="ColorRect" parent="CamRoot/h/v/SpringArm3D/Camera"]
material = SubResource("ShaderMaterial_mry7x")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ShieldPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.88097, 0)

[node name="Shield" parent="ShieldPivot" instance=ExtResource("3_imjhw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.28998)
visible = false
collision_mask = 0

[node name="EnergyShield" type="MeshInstance3D" parent="ShieldPivot"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0.969798)
visible = false
mesh = SubResource("CylinderMesh_ocjjy")

[node name="EnergyShield---2" type="AnimatedSprite3D" parent="ShieldPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25283, 1.20745)
visible = false
pixel_size = 0.04
sprite_frames = SubResource("SpriteFrames_hyahn")
speed_scale = 4.0

[node name="CarriedCrate" type="Area3D" parent="ShieldPivot" groups=["walls_objects"]]
visible = false
collision_layer = 80
collision_mask = 0
monitorable = false

[node name="CrateMesh" type="MeshInstance3D" parent="ShieldPivot/CarriedCrate"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.56124, 2.12034)
mesh = SubResource("BoxMesh_dv0o7")
skeleton = NodePath("../../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="ShieldPivot/CarriedCrate"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.56124, 2.12034)
shape = SubResource("BoxShape3D_pdq4e")

[node name="player_spooky" parent="." instance=ExtResource("5_j08mn")]

[node name="CrateCast" type="RayCast3D" parent="player_spooky"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.768644, 0.319656)
collision_mask = 64

[node name="MagicCooldown" type="Timer" parent="."]
wait_time = 0.435
one_shot = true

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_hjyu4")
autoplay = true
bus = &"music"

[node name="BossMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_v6lxc")
bus = &"music"

[node name="Oof" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_0kch7")
bus = &"fx"

[node name="Cast" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_sj83s")
bus = &"fx"

[node name="PerishedSong" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_5wmgc")
bus = &"music"

[node name="WinMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_478el")
bus = &"music"

[node name="CPUParticles3D" type="CPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6857, 0)

[connection signal="timeout" from="Control/KeyAlertTimer" to="." method="_on_key_alert_timer_timeout"]
[connection signal="finished" from="Music" to="." method="_on_music_finished"]
[connection signal="finished" from="BossMusic" to="." method="_on_boss_music_finished"]
[connection signal="finished" from="WinMusic" to="." method="_on_win_music_finished"]
